# NeuralNetwork

./: .gitignore  Activation.cpp  Activation.h  CMakeLists.txt  Layer.h  Linear.cpp  Linear.h  Makefile  Network.cpp  Network.h  README.md  Tensor.h  Tensor.tpp  a.out  main.cpp  main.cu  utils.cpp  utils.h
include/: Activation.h  Layer.h  Linear.h  Loss.h  Network.h  Tensor.h  utils.h
src/: Activation.cpp  Linear.cpp  Loss.cpp  Network.cpp  Tensor.tpp  main.cpp  utils.cpp
